it works! but ugly

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="all">
         <header>Crystals Collector</header>
 
-        <!-- <div class="main-section">
+        <div class="main-section">
 
             <section id="instructions">
                 <p>You will be given a random number at the start of the game.</p>
@@ -33,34 +33,18 @@
                 <p>Each time the game starts, the values of the crystals will also change.</p>
             </section>
 
-            <section id="random-number"></section>
+            <section class="target-number">Random Number: </section>
+
+            <section id="win-counter">Wins:</section>
+
+            <section id="total-score">Total Score:</section>
+
+            <section id="loss-counter">Losses:</section>
 
 
-            <section id="win-counter">win counter</section>
-
-            <section id="loss-counter">loss counter</section>
-            <div class="images-holder"></div>
-
-            <button class="button button-1"><img src="assets/images/blue.png" alt="blue crystal" width="100px"
-                    height="100px"></button>
-
-            <button class="button button-2"><img src="assets/images/red.png" alt="red crystal" width="100px"
-                    height="100px"></button>
-
-            <button class="button button-3"><img src="assets/images/diamond.png" alt="diamond crystal" width="100px"
-                    height="100px"></button>
-
-            <button class="button button-4"><img src="assets/images/purple.png" alt="purple crystal" width="100px"
-                    height="100px"></button> -->
-
-        ********************************
-        <section id="total-score">Your crystal total is:</section>
+            <div class="images-holder" width="100px" height="100px"></div>
+        </div>
     </div>
-    <div class="images-holder" width="100px" height="100px"></div>
-    </div>
-    ********************************************
-
-
 
 </body>
 
